update Fedex mention

--- a/index-EN.html
+++ b/index-EN.html
@@ -27,15 +27,14 @@
       <div class="faq-search">
           <input type="text" placeholder="Search Shipping" />
       </div>
-      <p style="width: 100%; padding: 1em; text-align: center; padding 1em; border: 2px solid black;">Free FedEx shipping on orders over $49.
-          <br />For a limited time only. Select FedEx at checkout.</p>
+      <p style="width: 100%; padding: 1em; text-align: center; padding 1em; border: 2px solid black;">Will the Canada Post labour strike affect the shipment of my package? <br/>Learn more in the <a target="_blank" href="http://altitude-blog.com/en/black-friday-faq-altitude-sports/#cp-strike"><u>Black Friday FAQ.</u></a></p>
       <div id="accordionShipping" class="accordion">
           <div class="card">
               <div class="card-header">
                   <h2>Free shipping within Canada on all orders over $49</h2>
               </div>
               <div class="card-body">
-                  <p>At Altitude Sports, standard shipping by Fedex is free within Canada on all orders over $49, after applicable discounts and before taxes.</p>
+                  <p>At Altitude Sports, standard shipping by Canada Post is free within Canada on all orders over $49, after applicable discounts and before taxes.</p>
                   <p>Surcharges may be applied in cases where box dimension, weight, or remoteness of delivery address are exceptional. It is easy to find out if your purchase is eligible for standard delivery while you are shopping on our site.</p>
               </div>
           </div>
@@ -719,7 +718,8 @@
               </div>
               <div class="card-body">
                   <p>We updated our website on April 13th, 2017. If you have a gift card from our previous website it is still valid on the new site.</p>
-                  <p>When entering your gift card number at checkout, simply write ALT at the beginning of the sequence. Example: <i>mun8p3bco69u</i> is now <i>ALTmun8p3bco69u</i>.</p>
+                  <p>When entering your gift card number at checkout, simply write ALT at the beginning of the sequence.</p>
+                  <p>Example: <i>mun8p3bco69u</i> is now <i>ALTmun8p3bco69u</i>.</p>
                   <p>Please note that gift cards are not applicable to products purchased from a <a href="#marketplace">Marketplace</a> seller.</p>
               </div>
           </div>
