--- a/index-FR.html
+++ b/index-FR.html
@@ -27,15 +27,14 @@
       <div class="faq-search">
           <input type="text" placeholder="Rechercher dans Livraison" />
       </div>
-      <p style="width: 100%; padding: 1em; text-align: center; padding 1em; border: 2px solid black;">Livraison FedEx gratuite pour les commandes de 49$+.
-          <br />Pour un temps limité, nous offrons une deuxième option de livraison gratuite que vous pouvez choisir au moment de compléter votre commande.</p>
+      <p style="width: 100%; padding: 1em; text-align: center; padding 1em; border: 2px solid black;">Est-ce que la grève de Postes Canada peut affecter la livraison de ma commande? <br/>En savoir plus sur <a target="_blank" href="http://altitude-blog.com/fr/faq-du-vendredi-fou-chez-altitude-sports/#pc-strike"><u>la FAQ du Vendredi Fou.</u></a></p>
       <div id="accordionShipping" class="accordion">
           <div class="card">
               <div class="card-header">
                   <h2>Livraison gratuite au Canada pour toutes commandes de 49 $ et plus</h2>
               </div>
               <div class="card-body">
-                  <p>Chez Altitude Sports, la livraison standard avec Fedex est offerte gratuitement à l’intérieur du Canada avec toute commande de 49$ et plus, avant taxe et après rabais applicables.</p>
+                  <p>Chez Altitude Sports, la livraison standard avec Postes Canada est offerte gratuitement à l’intérieur du Canada avec toute commande de 49$ et plus, avant taxe et après rabais applicables.</p>
                   <p>Des surcharges peuvent s'appliquer pour certains envois exceptionnels de par leur dimension, leur poids ou l'éloignement de l'adresse de livraison. Vous pouvez facilement vérifier si votre commande est admissible à la  livraison standard lorsque vous magasinez sur notre site.</p>
               </div>
           </div>
@@ -130,8 +129,8 @@
               <div class="card-body">
                   <p>Altitude Sports fait confiance à Postes Canada et à FedEx pour livrer vos commandes. Nous croyons que ces compagnies proposent l’offre la plus complète et le service le plus rapide pour nos clients et pour nous.</p>
                   <p>Pour savoir quelle méthode de livraison vous convient le mieux, veuillez suivre les instructions suivantes:</p>
-                  <p><strong>1.</strong> Une fois rendu à la caisse dans la section Livraison, vous pourrez sélectionner la compagnie de livraison de votre choix tout en voyant les différents coûts d’envoi.</p>
-                  <p><strong>2.</strong> Veuillez noter que seul Postes Canada peut livrer dans une boîte postale.</p>
+                  <p>Une fois rendu à la caisse dans la section Livraison, vous pourrez sélectionner la compagnie de livraison de votre choix tout en voyant les différents coûts d’envoi.</p>
+                  <p>Veuillez noter que seul Postes Canada peut livrer dans une boîte postale.</p>
               </div>
           </div>
           <div class="card">
@@ -716,7 +715,9 @@
                   <h2>Pourquoi ma carte cadeau ne fonctionne-t-elle pas?</h2>
               </div>
               <div class="card-body">
-                  <p>Nous avons mis à jour notre site internet le 13 avril 2017. Si votre carte cadeau provient de notre ancien site, elle est toujours valide sur le nouveau. Au moment de régler votre commande, inscrivez simplement ALT au début de la série de chiffres. Par exemple: <em>mun8p3bco69u</em> deviendra <em>ALTmun8p3bco69u</em>.</p>
+                  <p>Nous avons mis à jour notre site internet le 13 avril 2017. Si votre carte cadeau provient de notre ancien site, elle est toujours valide sur le nouveau.</p>
+                  <p>Au moment de régler votre commande, inscrivez simplement ALT au début de la série de chiffres.</p>
+                  <p>Par exemple: <em>mun8p3bco69u</em> deviendra <em>ALTmun8p3bco69u</em>.</p>
                   <p>Veuillez noter que les cartes-cadeaux ne sont pas valides pour les achats provenant d’un vendeur de la <a href="#marketplace">Place de marché</a>.</p>
               </div>
           </div>
