update css opening hour store

--- a/index-EN.html
+++ b/index-EN.html
@@ -920,38 +920,16 @@
                       <br />Contact: tremblant@altitude-sports.com
                       <br />Next to the Starbucks on the 117</p>
                   <h4>Opening Hours:</h4>
-                  <table class="mb-3" border="0" cellpadding="0" cellspacing="0" style="white-space: nowrap;">
-                      <tbody>
-                          <tr>
-                              <td class="p-1">Monday:</td>
-                              <td class="p-1">10-6 pm</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Tuesday:</td>
-                              <td class="p-1">10-6 pm</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Wednesday:</td>
-                              <td class="p-1">10-6 pm</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Thursday:</td>
-                              <td class="p-1">12-9 pm</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Friday:</td>
-                              <td class="p-1">12-9 pm</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Saturday:</td>
-                              <td class="p-1">10-5 pm</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Sunday:</td>
-                              <td class="p-1">10-5 pm</td>
-                          </tr>
-                      </tbody>
-                  </table>
+                  <ul style="list-style: none; padding: 0;">
+                    <li><span style="display:inline-block;width:7em">Monday:</span> 10-6 pm</li>
+                    <li><span style="display:inline-block;width:7em">Tuesday:</span> 10-6 pm</li>
+                    <li><span style="display:inline-block;width:7em">Wednesday:</span> 10-6 pm</li>
+                    <li><span style="display:inline-block;width:7em">Thursday:</span> 12-9 pm</li>
+                    <li><span style="display:inline-block;width:7em">Friday:</span> 12-9 pm</li>
+                    <li><span style="display:inline-block;width:7em">Saturday:</span> 10-5 pm</li>
+                    <li><span style="display:inline-block;width:7em">Sunday:</span> 10-5 pm</li>
+                  </ul>
+        
               </div>
           </div>
       </div>
