--- a/index-FR.html
+++ b/index-FR.html
@@ -927,38 +927,15 @@
                         </div>
                     -->
                   <h4>Heures d’ouverture :</h4>
-                  <table class="mb-3" border="0" cellpadding="0" cellspacing="0" style="white-space: nowrap;">
-                      <tbody>
-                          <tr>
-                              <td class="p-1">Lundi :</td>
-                              <td class="p-1">10 h à 18 h</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Mardi :</td>
-                              <td class="p-1">10 h à 18 h</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Mercredi :</td>
-                              <td class="p-1">10 h à 18 h</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Jeudi :</td>
-                              <td class="p-1">12 h à 21 h</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Vendredi :</td>
-                              <td class="p-1">12 h à 21 h</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Samedi:</td>
-                              <td class="p-1">10 h à 17 h</td>
-                          </tr>
-                          <tr>
-                              <td class="p-1">Dimanche :</td>
-                              <td class="p-1">10 h à 17 h</td>
-                          </tr>
-                      </tbody>
-                  </table>
+                  <ul style="list-style: none; padding: 0;">
+                    <li><span style="display:inline-block;width:7em">Lundi :</span> 10 h à 18 h</li>
+                    <li><span style="display:inline-block;width:7em">Mardi :</span> 10 h à 18 h</li>
+                    <li><span style="display:inline-block;width:7em">Mercredi :</span> 10 h à 18 h</li>
+                    <li><span style="display:inline-block;width:7em">Jeudi :</span> 12 h à 21 h</li>
+                    <li><span style="display:inline-block;width:7em">Vendredi :</span> 12 h à 21 h</li>
+                    <li><span style="display:inline-block;width:7em">Samedi :</span> 10 h à 17 h</li>
+                    <li><span style="display:inline-block;width:7em">Dimanche :</span> 10 h à 17 h</li>
+                  </ul>
               </div>
           </div>
       </div>
