add Christmas Delivery Deadline

--- a/index-EN.html
+++ b/index-EN.html
@@ -27,6 +27,13 @@
       <div class="faq-search">
           <input type="text" placeholder="Search Shipping" />
       </div>
+      <div style="background-image: url(https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png);padding: 0 1em 1.5em;">
+            <p style="font-weight: 500;font-size: 1.5em;margin-top: 0.5em;">Get it in time for Christmas.</p>
+            <p><strong>Xpresspost is FREE on orders over 99$.</strong> For a limited time only, in Canada.</p>
+            <p>We’re monitoring closely Canada Post’s backlog caused by the rotating strike that ended on Nov. 27.<br/> The following last order dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as provided directly by Canada Post.</strong></p>
+            <p>We will provide daily update on this page.</p>
+            <i>Last updated: December 7, 2018</i>
+      </div>
       <div id="accordionShipping" class="accordion">
           <div class="card">
               <div class="card-header">
