--- a/index-FR.html
+++ b/index-FR.html
@@ -27,6 +27,13 @@
       <div class="faq-search">
           <input type="text" placeholder="Rechercher dans Livraison" />
       </div>
+      <div style="background-image: url(https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png);padding: 0 1em 1.5em;">
+        <p style="font-weight: 500;font-size: 1.5em;margin-top: 0.5em;">Recevez votre commande à temps pour Noël.</p>
+        <p><strong>Xpresspost est GRATUIT sur les commandes de plus de 99$.</strong> Pour un temps limité, au Canada. </p>
+        <p>Nous suivons avec attention les retards de livraison de Postes Canada dus aux grèves tournantes ayant pris fin le 27 novembre.<br/> Les dates limites de commandes ci-dessous prennent en compte nos délais de traitement, les délais de livraison standard de Postes Canada, <strong>ainsi que les retards maximum prévus et fournis par Postes Canada.</strong></p>
+        <p>Des mises à jour quotidiennes seront publiées sur cette page.</p>
+        <i>Dernière mise à jour : 7 décembre 2018</i>
+      </div>
       <div id="accordionShipping" class="accordion">
           <div class="card">
               <div class="card-header">
