--- a/index-EN.html
+++ b/index-EN.html
@@ -45,14 +45,16 @@
       <div class="faq-search">
           <input type="text" placeholder="Search Shipping" />
       </div>
-      <div style="background-image: url(https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png);padding: 0 1em 1em;margin-top: 1.5em;">
+      <div style="background-image: url(https://cdn.shopify.com/s/files/1/1230/9376/files/ss-banner-bg-dots.png);padding: 0 1em 1em;margin: 1.5em 0 2em;">
             <p style="font-weight: 500;font-size: 1.5em;margin-top: 0.5em;">Get it in time for Christmas.</p>
             <p>Below are the final ordering dates by region and shipping method.</p>
             <p><strong>Xpresspost is FREE on orders over 99$.</strong> For a limited time only, in Canada.</p>
-            <p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff;line-height: 1.7em;">The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method.
+            <p style="border: 1px solid rgba(0,0,0,0.1); padding: 1em; margin-right: 0.5em; background-color: #fff;line-height: 1.7em;">We’re closely monitoring Canada Post’s backlog caused by the rotating strike that ended on Nov. 27.
+            The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method.
             These dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as directly indicated by Canada Post.</strong>
             We will provide daily updates on this page.</p>
-            <p>Here is an updated list of the final ordering dates, by region and shipping method <i style="opacity: 0.55;white-space: nowrap;">(Last updated: December 7, 2018)</i> :</p>
+            <p style="font-weight: 500;font-size: 1.5em;margin-top: 0.5em;">Here is an updated list of the final ordering dates, by region and shipping method :</p>
+            <p><i style="opacity: 0.55;white-space: nowrap;">(Last updated: December 7, 2018)</i></p>
             <div id="table-container">
                 <table id="shipping-holidays">
                     <thead style="vertical-align: bottom;">
