update text Christmas Delivery

--- a/index-FR.html
+++ b/index-FR.html
@@ -55,7 +55,7 @@
         <div id="table-container">
             <table id="shipping-holidays">
                 <thead style="vertical-align: bottom;">
-                    <tr><th>Région</th><th>Xpresspost</th><th>Expedited Parcel</th></tr>
+                    <tr><th>Région</th><th>Xpresspost</th><th>Colis accélérés</th></tr>
                 </thead>
                 <tbody>
                     <tr><td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Grand Montréal, Toronto et Ottawa</strong></td></tr>
@@ -65,8 +65,8 @@
                     <tr><td>Longueuil, Gatineau</td><td>17-Dec-18</td><td>17-Dec-18</td></tr>
                     <tr><td>Montréal, Laval (tous les codes postaux commençant par H)</td><td>17-Dec-18</td><td>17-Dec-18</td></tr>
                     <tr class="last-row"><td>Le sud de l'Ontario (tous les codes postaux commençant par L)</td><td>17-Dec-18</td><td>12-Dec-18</td></tr>
-                    <tr><td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Canada métropolitaine</strong></td></tr>
-                    <tr><td>L'est de l'Ontario (tous les codes postaux commençant par K)</td><td>14-Dec-18</td><td>12-Dec-18</td></tr>
+                    <tr><td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Canada métropolitain</strong></td></tr>
+                    <tr><td>Sud-Est de l'Ontario (tous les codes postaux commençant par K)</td><td>14-Dec-18</td><td>12-Dec-18</td></tr>
                     <tr><td>Grand Calgary / Grand Edmonton</td><td>14-Dec-18</td><td>10-Dec-18</td></tr>
                     <tr><td>Grand Charlottetown</td><td>14-Dec-18</td><td>10-Dec-18</td></tr>
                     <tr><td>Grand Halifax</td><td>14-Dec-18</td><td>11-Dec-18</td></tr>
@@ -76,13 +76,13 @@
                     <tr><td>Grand St. John's</td><td>14-Dec-18</td><td>07-Dec-18</td></tr>
                     <tr><td>Grand Vancouver / Grand Victoria</td><td>12-Dec-18</td><td>06-Dec-18</td></tr>
                     <tr><td>Grand Winnipeg</td><td>14-Dec-18</td><td>11-Dec-18</td></tr>
-                    <tr><td>Le sud-ouest de l'Ontario (tous les codes postaux commençant par N)</td><td>14-Dec-18</td><td>12-Dec-18</td></tr>
-                    <tr><td>L'ouest de l'Ontario (tous les codes postaux commençant par P)</td><td>14-Dec-18</td><td>11-Dec-18</td></tr>
-                    <tr><td>L'ouest du Québec (tous les codes postaux commençant par J)</td><td>14-Dec-18</td><td>12-Dec-18</td></tr>
-                    <tr><td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Metropolitain Rural Canada</strong></td></tr>
+                    <tr><td>Sud-ouest de l'Ontario (tous les codes postaux commençant par N)</td><td>14-Dec-18</td><td>12-Dec-18</td></tr>
+                    <tr><td>Ouest de l’Ontario (tous les codes postaux commençant par P)</td><td>14-Dec-18</td><td>11-Dec-18</td></tr>
+                    <tr><td>Ouest du Québec (tous les codes postaux commençant par J)</td><td>14-Dec-18</td><td>12-Dec-18</td></tr>
+                    <tr><td colspan="3" style="border: none;padding: 1em 0 0.5em;"><strong>Canada rural</strong></td></tr>
                     <tr><td>Alberta (tous les codes postaux commençant par T)</td><td>13-Dec-18</td><td>07-Dec-18</td></tr>
                     <tr><td>British Columbia (tous les codes postaux commençant par V)</td><td>13-Dec-18</td><td>07-Dec-18</td></tr>
-                    <tr><td>L'est du Québec (tous les codes postaux commençant par G)</td><td>13-Dec-18</td><td>11-Dec-18</td></tr>
+                    <tr><td>Est du Québec (tous les codes postaux commençant par G)</td><td>13-Dec-18</td><td>11-Dec-18</td></tr>
                     <tr><td>Iqaluit (tous les codes postaux commençant par X0A0A1, X0A0H0 and X0A1H0)</td><td>12-Dec-18</td><td>12-Dec-18</td></tr>
                     <tr><td>Manitoba (tous les codes postaux commençant par R)</td><td>13-Dec-18</td><td>10-Dec-18</td></tr>
                     <tr><td>Nouveau-Brunswick (tous les codes postaux commençant par E)</td><td>13-Dec-18</td><td>10-Dec-18</td></tr>
