--- a/index-EN.html
+++ b/index-EN.html
@@ -53,7 +53,7 @@
             The following dates are the <strong>final days</strong> you can place an order to ensure delivery before Christmas, depending on your region and selected shipping method.
             These dates take into account our order processing times, standard Canada Post delivery times <strong>and maximum extra delays as directly indicated by Canada Post.</strong>
             We will provide daily updates on this page.</p>
-            <p style="font-weight: 500;font-size: 1.3em;margin-top: 0.5em;">Here is an updated list of the final ordering dates, by region and shipping method</p>
+            <p style="font-weight: 500;font-size: 1.3em;margin-top: 0.5em;">Final ordering dates, by region and shipping method</p>
             <p><i style="opacity: 0.55;white-space: nowrap;">(Last updated: December 7, 2018)</i></p>
             <div id="table-container">
                 <table id="shipping-holidays">
