content  changes not merge

--- a/FAQ_10-12-18-EN.html
+++ b/FAQ_10-12-18-EN.html
@@ -1,4 +1,4 @@
-<style><!--
+<style>
 div#table-container{
         
     }
@@ -15,7 +15,7 @@ div#table-container{
     table#shipping-holidays tr.last-row td{
         border: none;
     }
---></style>
+</style>
 <div class="col-12 col-md-3" id="faq-sidebar">
 <h2 class="pt-1">Help Center</h2>
 <ul class="left-menu help-center list-unstyled d-none d-md-block">
